2002-07-17 Steve Fox <drfickle@uberh4x0r.org>

	* index.html
	* template.html

	Add the Friends of GNOME program

2002-06-26 Steve Fox <drfickle@uberh4x0r.org>

	* press.html
	* press/pr-gnome20.html

	Add 2.0 announce

2002-06-25 Steve Fox <drfickle@uberh4x0r.org>

	* membership-list.html

	Wow! Fix my old email address

2002-06-25 Steve Fox <drfickle@uberh4x0r.org>

	* press/pr-accessible.html
	* press/pr-borlandjoins.html
	* press/pr-foundation.html
	* press/pr-gnome14.html
	* press/pr-mandrakesoftjoins.html
	* press/pr-newcommitments.html
	* press/pr-redflagjoins.html
	* press/pr-redhat.html
	* press/pr-sunjoins.html : Fix bad HTML
	* press/pr-gnomeenelsur.html : Add Latin American tour
	* press.html


2002-03-05  Glynn Foster  <glynn.foster@sun.com>

	* index.html: Remove Borland, Gnumatic, OMG, TurboLinux.
		      s/VA Linux/OSDN
	 logos/*: Removed old and added new.

2002-03-05  Glynn Foster  <glynn.foster@sun.com>

	* index.html: Changed link to new Ximian logo [better quality].
	* logos/ximian.jpg: Added.

2001-02-14  Dan Mueth <muet@alumni.uchicago.edu>

	* press.html: Adding link for recent Assistive Technology press release
	* pr-assistivetech.html: Adding recent press release on assistive 
	                         technology.

2001-01-23  Glynn Foster <glynn.foster@sun.com>

	* logos/*.gif: logos
	* index.html: Added logos to the main page as 
	provided by Dan.

2001-12-08  Glynn Foster <glynn.foster@sun.com>

	* board_of_directors-2000.html:
	* board_of_directors.html:
	* index.html:

	Add details of new official board members.

2001-12-07  Glynn Foster <glynn.foster@sun.com>

	* press/pr-accessible.html:
	* press/pr-borlandjoins.html:
	* press/pr-foundation.html:
	* press/pr-gnome14.html:
	* press/pr-mandrakesoftjoins.html:
	* press/pr-newcommitments.html:
	* press/pr-ney_execdir.html:
	* press/pr-redflagjoins.html:
	* press/pr-redhat.html:
	* press/pr-sunjoins.html:
	
	Fix links. Thanks to Andreas J. Guelzow for 
	pointing this out.
