@@ -5,7 +5,7 @@
  </head>
  <body bgcolor="#FFFFFF">
   <center>
-   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+   <table BORDER=2 CELLPADDING=5 WIDTH="670" NOSAVE >
     <tr VALIGN=TOP NOSAVE>
      <td VALIGN=TOP NOSAVE>
       <center>
@@ -25,7 +25,7 @@
        <a href="documentation.html">Documentation</a> :&nbsp;
        <a href="membership.html">Membership</a> :&nbsp;
        <a href="elections.html">Elections</a> :&nbsp;
-       <a href="directory.html">Directory</a> 
+	   <a href="directory.html">Directory</a> :&nbsp;
        <a href="http://www.gnome.org/friends/">Fundraising</a> 
       </center>
      </td>
