@@ -5,7 +5,7 @@
  </head>
  <body bgcolor="#FFFFFF">
   <center>
-   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+   <table BORDER=2 CELLPADDING=5 WIDTH="670" NOSAVE >
     <tr VALIGN=TOP NOSAVE>
      <td VALIGN=TOP NOSAVE>
       <center>
