@@ -3,6 +3,13 @@
 	* index.html
 	* template.html
 
+	Ack! Increase table width (I _hate_ fixed table widths)
+
+2002-07-17 Steve Fox <drfickle@uberh4x0r.org>
+
+	* index.html
+	* template.html
+
 	Add the Friends of GNOME program
 
 2002-06-26 Steve Fox <drfickle@uberh4x0r.org>
